feat: implement clinical agent workflow engine, chat session management, and integrated diagnostic tool support