@@ -66,7 +66,18 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .toList();
+
+        config.setAllowedOrigins(origins);
+        // Allow wildcard subdomains (e.g., http://*.localhost:5173) for multi-tenant testing
+        config.setAllowedOriginPatterns(List.of(
+                "http://*.localhost:[*]",
+                "http://localhost:[*]",
+                "https://*.localhost:[*]",
+                "http://*.127.0.0.1:[*]"
+        ));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
